--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                </a>
            </div> -->
        </section>
-       <section id="us">2
+       <section id="us">
             <div class="container clearfix"></div>
        </section>
        <section id="search">
@@ -40,10 +40,10 @@
                <input type="text"><button class="search">搜索</button>
            </div>
            <div class="container"></div>
-       </section>
-       <div class="loading">
-            <span class="iconfont icon-loading"></span>
+           <div class="loading" style="display:none">
+            <span class="iconfont icon-loading" ></span>
         </div>
+       </section>
    </main>
     <footer>
         <div class="active"><span class="iconfont icon-dashujukeshihuaico- "></span><span>排行</span></div>
